--- a/test/cet.html
+++ b/test/cet.html
@@ -6,8 +6,10 @@
         
         <details name="1">
       <summary>T0-01</summary>
+      <canvas id="c">
 dmmekdkkjeejjrjrjrjrjrjhruueieiejehbebehejejeheheuejheheejjeheheheheehenisowowpeoiqkwjqnwnnwshehshshhshshshshhhsgsvwvwhwhshwhwhwhhwhw
-      <canvas id="c"></canvas>fffgguusuususuuskskkkkskskskskkskjnenenenrnrnrnnrnrnrnrwuqjwbjwjwjwhjwjwwjwjkwjbsbsheuehhebebehehehebhehehehehehehehehehebeheheheususuususususususuus
+    fffgguusuususuuskskkkkskskskskkskjnenenenrnrnrnnrnrnrnrwuqjwbjwjwjwhjwjwwjwjkwjbsbsheuehhebebehehehebhehehehehehehehehehebeheheheususuususususususuus
+    </canvas>
 <br></details>
 <details name="1">
       <summary>T0-02</summary>
