--- a/test/cet.html
+++ b/test/cet.html
@@ -3,37 +3,21 @@
         <title>draw test</title>
     </head>
     <body>
-        
-        <details name="1">
-      <summary>T0-01</summary>
-      <canvas id="c">
+      <div class="c">
+    </div>
+    <p>
 dmmekdkkjeejjrjrjrjrjrjhruueieiejehbebehejejeheheuejheheejjeheheheheehenisowowpeoiqkwjqnwnnwshehshshhshshshshhhsgsvwvwhwhshwhwhwhhwhw
-    fffgguusuususuuskskkkkskskskskkskjnenenenrnrnrnnrnrnrnrwuqjwbjwjwjwhjwjwwjwjkwjbsbsheuehhebebehehehebhehehehehehehehehehebeheheheususuususususususuus
-    </canvas>
-<br></details>
-<details name="1">
-      <summary>T0-02</summary>
-      <div class="demo"></div>
-<br></details>
-
-<script>
-        var c = document.getElementById("c");
-        var ct = c.getContext("2d");
-        ct.fillStyle = "#ff0000";
-        ct.fillRect(100,100,100,100);
-        
-        </script>
+    fffgguusuususuuskskkkkskskskskkskjnenenenrnrnrnnrnrnrnrwuqjwbjwjwjwhjwjwwjwjkwjbsbsheuehhebebehehehebhehehehehehehehehehebeheheheususuususususususuus</p>
 
 <style>
-.demo {
-width: 150px;
-height: 150px;
-border-radius: 50%；
-border: 2px solid #000；
-background: conic-gradient (#f00,#ff0,#0f0,#0ff,#00f);
+.c {
+width: 100%;
+height: 100%;
+background-color: red;
+z-index: -2;
 }
-canvas {
-    z-index:-2;
+p {
+    z-index: -1;
 }
 </style>
 
