--- a/test/cet.html
+++ b/test/cet.html
@@ -8,6 +8,11 @@
     <p>
 dmmekdkkjeejjrjrjrjrjrjhruueieiejehbebehejejeheheuejheheejjeheheheheehenisowowpeoiqkwjqnwnnwshehshshhshshshshhhsgsvwvwhwhshwhwhwhhwhw
     fffgguusuususuuskskkkkskskskskkskjnenenenrnrnrnnrnrnrnrwuqjwbjwjwjwhjwjwwjwjkwjbsbsheuehhebebehehehebhehehehehehehehehehebeheheheususuususususususuus</p>
+    <div class="dc">
+        <p>
+dmmekdkkjeejjrjrjrjrjrjhruueieiejehbebehejejeheheuejheheejjeheheheheehenisowowpeoiqkwjqnwnnwshehshshhshshshshhhsgsvwvwhwhshwhwhwhhwhw
+    fffgguusuususuuskskkkkskskskskkskjnenenenrnrnrnnrnrnrnrwuqjwbjwjwjwhjwjwwjwjkwjbsbsheuehhebebehehehebhehehehehehehehehehebeheheheususuususususususuus</p>
+    </div>
 
 <style>
 .c {
@@ -18,6 +23,12 @@ z-index: -2;
 }
 p {
     z-index: -1;
+}
+.dc {
+width: 100%;
+height: 100%;
+background-color: red;
+z-index: -2;
 }
 </style>
 
