--- a/test/cet.html
+++ b/test/cet.html
@@ -3,11 +3,11 @@
         <title>draw test</title>
     </head>
     <body>
-      <div class="c">
-    </div>
-    <p>
+      <cancas class="c">
+        <p>
 dmmekdkkjeejjrjrjrjrjrjhruueieiejehbebehejejeheheuejheheejjeheheheheehenisowowpeoiqkwjqnwnnwshehshshhshshshshhhsgsvwvwhwhshwhwhwhhwhw
     fffgguusuususuuskskkkkskskskskkskjnenenenrnrnrnnrnrnrnrwuqjwbjwjwjwhjwjwwjwjkwjbsbsheuehhebebehehehebhehehehehehehehehehebeheheheususuususususususuus</p>
+    </canvas>
     <div class="dc">
         <p>
 dmmekdkkjeejjrjrjrjrjrjhruueieiejehbebehejejeheheuejheheejjeheheheheehenisowowpeoiqkwjqnwnnwshehshshhshshshshhhsgsvwvwhwhshwhwhwhhwhw
