--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Onlycollapse</title>
+    <title>Collapseless</title>
     <link rel="icon" type="image/png" sizes="96x96" href="file/Logo.ico">
   </head>
   <body style="background-color: #000000"><font color='white'>
@@ -128,7 +128,7 @@ input[name='6'] {
     <div class="">
       <br><br><br>
     <h1><strong>
-<div class="notranslate">Onlycollapse</div></strong> <br>Happy 2024!</h1>
+<div class="notranslate">Collapseless</div></strong> <br>Happy 2024!</h1>
     <br>
     <div class="">
     </div>
