--- a/help.html
+++ b/help.html
@@ -36,8 +36,8 @@
       1.How can I join you? <br>
     <input type="button" name="next" value="THIS" onclick="c()"> <br> can join</h3>
     <br>
-    <h3>2.What is Onlycollapse? <br>
-    The Onlycollapse team works on the development of computer software and websites, as well as physical containment.</h3><br>
+    <h3>2.What is Collapseless? <br>
+    The Collapseless team works on the development of computer software and websites, as well as physical containment.</h3><br>
     <h3>3. Why is the website unresponsive sometimes?<br>
     Open URL time: <br>
     <br>
