--- a/join/xxay.html
+++ b/join/xxay.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>agreement of Onlycollapse</title>
-    <link rel="icon" type="image/png" sizes="96x96" href="https://onlycollapse.github.io/file/Logo.ico">
+    <title>agreement of Collapseless </title>
+    <link rel="icon" type="image/png" sizes="96x96" href="https://collapseless.github.io/file/Logo.ico">
   </head>
   <body style="background-color: #000000">
     <script type="text/javascript">
@@ -22,48 +22,48 @@
     }
     </style>
     <font color='white'><textarea name="name" rows="20" cols="80" readonly="readonly" style="resize:none;">
-    agreement of Onlycollapse
-    Onlycollapse Non-Disclosure Agreement
+    agreement of Collapseless 
+    Collapseless Non-Disclosure Agreement
 
-This Agreement is entered into by the Onlycollapse team and the person or entity you fill in in the field in the process of completing this Agreement.
+This Agreement is entered into by the Collapseless team and the person or entity you fill in in the field in the process of completing this Agreement.
 A. Confidential Information
-      In this Agreement, "Confidential Information" means information designated by the Onlycollapse team or its affiliates as confidential to an individual, or which, by its nature and the circumstances of disclosure, should be treated in good faith. Confidential Information includes, but is not limited to, any discussions and materials between the Onlycollapse team or its affiliates and individuals relating to unpublished Onlycollapse products, and the terms of any Onlycollapse team agreement or protocol template. However, confidential information does not include information that an individual can conclusively demonstrate that:
+      In this Agreement, "Confidential Information" means information designated by the Collapseless team or its affiliates as confidential to an individual, or which, by its nature and the circumstances of disclosure, should be treated in good faith. Confidential Information includes, but is not limited to, any discussions and materials between the Collapseless team or its affiliates and individuals relating to unpublished Collapseless products, and the terms of any Collapseless team agreement or protocol template. However, confidential information does not include information that an individual can conclusively demonstrate that:
 
-      [I] the individual has not entered the public domain in breach of any obligation owed to Onlycollapse;
+      [I] the individual has not entered the public domain in breach of any obligation owed to Collapseless ;
 
       [II] INFORMATION THAT AN INDIVIDUAL RIGHTFULLY RECEIVES FROM A THIRD PARTY THAT IS NOT SUBJECT TO CONFIDENTIALITY;
 
-      [III] INFORMATION THAT THE INDIVIDUAL KNEW PRIOR TO FIRST RECEIVING FROM Onlycollapse and that is not subject to restrictions on use and disclosure;
+      [III] INFORMATION THAT THE INDIVIDUAL KNEW PRIOR TO FIRST RECEIVING FROM Collapseless and that is not subject to restrictions on use and disclosure;
 
       [IV] INFORMATION DEVELOPED INDEPENDENTLY BY INDIVIDUALS. "Affiliate" of a party to this Agreement means any entity that directly or indirectly controls, controls or is under common control with that party.
 
 B. limit
-      1. From the date on which Onlycollapse discloses confidential information to an individual, the individual shall not disclose this confidential information to a third party, otherwise voluntarily withdraw from the Onlycollapse team on behalf of the individual and process it at the same time.
+      1. From the date on which Collapseless discloses confidential information to an individual, the individual shall not disclose this confidential information to a third party, otherwise voluntarily withdraw from the Collapseless team on behalf of the individual and process it at the same time.
 
       2. Individuals may not reverse engineer, disassemble, or decompile any Software disclosed to Individuals under this Agreement.
 C. ELSE
-      1. All confidential information is the property of Onlycollapse and may not be disposed of privately.
+      1. All confidential information is the property of Collapseless and may not be disposed of privately.
 
       2. Subject to the limitations contained herein, this Agreement shall inure to the benefit of and be binding upon the parties, their respective successors and assigns.
 
 
 
 
-      Onlycollapse Non-Disclosure Agreement
+      Collapseless Non-Disclosure Agreement
 
-This Agreement is still entered into by and between the Onlycollapse team and the person or entity in the fields you complete during the process of filling out this Agreement.
+This Agreement is still entered into by and between the Collapseless team and the person or entity in the fields you complete during the process of filling out this Agreement.
 A. Confidentiality
-      For the purposes of this Agreement, "Confidential" means any content that is marked as confidential by the Onlycollapse team.
+      For the purposes of this Agreement, "Confidential" means any content that is marked as confidential by the Collapseless team.
 
       (Confidential content refers to the "*confidential*" label marked in, after and before the content of articles, projects, etc., and the content pointed to by the label is confidential content.)
 B. Commitments
-      For the purposes of this Agreement, "Commitments" means all commitments to the Onlycollapse Team guaranteed by individuals who have joined the Onlycollapse Team.
+      For the purposes of this Agreement, "Commitments" means all commitments to the Collapseless Team guaranteed by individuals who have joined the Onlycollapse Team.
 
       1. Commitments made by individuals are guaranteed according to their individual abilities and are only made with the consent of the team.
 
       2. The content of the commitment is strictly confidential by the team, but it does not mean that the individual does not need to keep the commitment confidential.
 C. Miscellaneous
-      The confidential content of the Onlycollapse team includes, but is not limited to:
+      The confidential content of the Collapseless team includes, but is not limited to:
       [1] Anything from the project is not disclosed;
       [2] Everything that is marked as confidential;
       [3] All content for members of the team.
