--- a/join/wwab.html
+++ b/join/wwab.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>join we</title>
-    <link rel="icon" type="image/png" sizes="96x96" href="https://onlycollapse.github.io/file/Logo.ico">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://collapseless.github.io/file/Logo.ico">
   </head>
   <body style="background-color: #000000">
     <script type="text/javascript">
       function a() {
         // WARNING:
-        window.location.href='https://onlycollapse.github.io/';
+        window.location.href='https://collapseless.github.io/';
       }
       function xaa() {
         // WARNING:
@@ -22,7 +22,7 @@
               if(document.getElementById('year').value>14){// /^\w+((-\w+)|(\.\w+))*\@[A-Za-z0-9]+((\.|-)[A-Za-z0-9]+)*\.[A-Za-z0-9]+$/
                 if(document.getElementById('em').value.search(/^(.+)@(.+)$/) != -1){
                   if(document.getElementById('robot').value=='I am not robot.'){
-                    window.location.href='https://j7855u7438.goho.co/join/xxay.html?email='+document.getElementById('em').value+'&ago='+document.getElementById('year').value+'&contry='+document.getElementById('one').value + "&why=" +       document.getElementById('whyy').value;
+                    window.location.href='https://collapseless.github.io/join/xxay.html?email='+document.getElementById('em').value+'&ago='+document.getElementById('year').value+'&contry='+document.getElementById('one').value + "&why=" +       document.getElementById('whyy').value;
                   }else{
                   alert('Are you a robot? ');
                 }
