--- a/join/xay.html
+++ b/join/xay.html
@@ -8,7 +8,7 @@
   <body style="background-color: #000000">
     <script type="text/javascript">
       function exit() {
-        window.location.href='wab.html';
+        window.location.href='thanks';
       }
     </script>
     <style>
