--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ input[name='6'] {
     <br><br>
 <div class="" name='where'>
   <h2>Where</h2>
-  <a href="https://github.com/Onlycollapse">GitHub</a>
+  <a href="https://github.com/Collapseless">GitHub</a>
 <br><br><br><br>     </div>
   </font>
   </body>
