--- a/help.html
+++ b/help.html
@@ -30,9 +30,7 @@
     </style>
     <div class="">
       <h1><strong>help</strong></h1><br>
-    <h3><br><br>You can email us at Onlycollapse@126.com<br>
-      <font color='red'>(Note: It's not Onlycollapse@163.com. We are dealing with this "piracy" emailbox.)
-             </font><br><br>
+    <h3><br><br>You can email us at Collapseless@163.com<br><br><br>
       1.How can I join you? <br>
     <input type="button" name="next" value="THIS" onclick="c()"> <br> can join</h3>
     <br>
