--- a/join/index.html
+++ b/join/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="utf-8">
     <title>How join</title>
-    <link rel="icon" type="image/png" sizes="96x96" href="https://onlycollapse.github.io/file/Logo.ico">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://collapseless.github.io/file/Logo.ico">
   </head>
   <body style="background-color: #000000"><font color='white'>
     <script type="text/javascript">
       function as() {
-        window.location.href='https://onlycollapse.github.io/';
+        window.location.href='https://collapseless.github.io/';
       }
       function wab() {
         window.location.href='oot';
@@ -29,7 +29,7 @@
     <h2><strong>Now that 5 people have joined, become one of them!</strong> </h2>
     <h1><strong>How:</strong></h1>
     <h4><strong>1.<s> call to team </s><br>2.<input type="button" name="next" value="join" onclick="wab()"><br>
-      3.Email to Onlycollapse@126.com
+      3.Email to Collapseless@126.com
       <br>
     3.None </strong> </h4>
     <h2><input type="button" name="" value="exit" onclick="as()"> </h2></div></font>
