--- a/join/oot.html
+++ b/join/oot.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Your choice</title>
-    <link rel="icon" type="image/png" sizes="96x96" href="https://onlycollapse.github.io/file/Logo.ico">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://collapseless.github.io/file/Logo.ico">
   </head>
   <body style="background-color: #000000"><font color='white'>
     <script type="text/javascript">
@@ -14,7 +14,7 @@
         window.location.href='wwab';
       }
       function f(){
-        window.location.href='https://onlycollapse.github.io/';
+        window.location.href='https://collapseless.github.io/';
       }
     </script>
     <style>
