--- a/join/thanks.html
+++ b/join/thanks.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>form has been submitted</title>
-    <link rel="icon" type="image/png" sizes="96x96" href="https://onlycollapse.github.io/file/Logo.ico">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://collapseless.github.io/file/Logo.ico">
   </head>
   <body style="background-color: #000000">
     <style>
@@ -18,7 +18,7 @@
     </style>
     <script type="text/javascript">
       function a() {
-        window.location.href='https://onlycollapse.girhub.io/';
+        window.location.href='https://collapseless.girhub.io/';
       }
     </script><font color='white'>
     <div class="">
