--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ input[name='1'] {
   left: 10%;
   transform: translateX(-61%);
   padding: 5px 5px;
-  background-color: #ffffff;
-  color: #000;
+  background-color: #000000;
+  color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -47,11 +47,11 @@ input[name='1'] {
 input[name='2'] {
   position: fixed;
   top: 0;
-  left: 10%;
+  left: 14%;
   transform: translateX(39%);
   padding: 5px 5px;
-  background-color: #ffffff;
-   color: #000;
+  background-color: #000000;
+   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -59,11 +59,11 @@ input[name='2'] {
 input[name='3'] {
   position: fixed;
   top: 0;
-  left: 10%;
+  left: 18%;
   transform: translateX(139%);
   padding: 5px 5px;
-  background-color: #ffffff;
-   color: #000;
+  background-color: #000000;
+   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -71,11 +71,11 @@ input[name='3'] {
 input[name='4'] {
   position: fixed;
   top: 0;
-  left: 10%;
+  left: 22%;
   transform: translateX(239%);
   padding: 5px 5px;
-  background-color: #ffffff;
-   color: #000;
+  background-color: #000000;
+   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -83,11 +83,11 @@ input[name='4'] {
 input[name='5'] {
   position: fixed;
   top: 0;
-  left: 10%;
+  left: 26%;
   transform: translateX(339%);
   padding: 5px 5px;
-  background-color: #ffffff;
-   color: #000;
+  background-color: #000000;
+   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -95,11 +95,11 @@ input[name='5'] {
 input[name='6'] {
   position: fixed;
   top: 0;
-  left: 10%;
+  left: 30%;
   transform: translateX(439%);
   padding: 5px 5px;
-  background-color: #ffffff;
-   color: #000;
+  background-color: #000000;
+   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -128,21 +128,18 @@ input[name='6'] {
     <div class="">
       <br><br><br>
     <h1><strong>
-<div class="notranslate">Collapseless</div></strong> <br>Happy 2024!</h1>
-    <br>
+<div class="notranslate">Collapseless</div></strong>  </h1>
     <div class="">
     </div>
-    <h5>Updated on 2024.6.5</h5>
-    <h4>---------------</h4>
-    
-    <h2><input type="button" name="1" value="Join us" onclick="check()"> </h2>
 
+
+    <h2><input type="button" name="1" value="Join us" onclick="check()"> </h2>
     <h2><input type="button" name="2" value="help" onclick="c()"></h2>
     <h2><input type="button" name="3" value="interesting things" onclick="ck()"></h2>
     <h2><input type="button" name="4" value="Team News" onclick="che()"></h2>
     <h2><input type="button" name="5" value="login" onclick="chk()"></h2>
-    <h2><input type="button" name="6" value="Virus Collection" onclick="vo()" class='button1'></h2>    </div>
-    <img src="file/Logo.ico" alt="Logo" width="200" height="200">
+    <!--<h2><input type="button" name="6" value="Virus Collection" onclick="vo()" class='button1'></h2>    </div>
+  --><img src="file/Logo.ico" alt="Logo" width="200" height="200">
     <div class="" style="--shutter-delay: 202.5ms;" color='white'></div>
     <br><br>
 <div class="" name='where'>
