--- a/help.html
+++ b/help.html
@@ -31,20 +31,39 @@
     <div class="">
       <h1><strong>help</strong></h1><br>
     <h3><br><br>You can email us at Collapseless@163.com<br><br><br>
-      1.How can I join you? <br>
-    <input type="button" name="next" value="THIS" onclick="c()"> <br> can join</h3>
-    <br>
-    <h3>2.What is Collapseless? <br>
-    The Collapseless team works on the development of computer software and websites, as well as physical containment.</h3><br>
-    <h3>3. Why is the website unresponsive sometimes?<br>
+      <details name='1'>
+        <summary>1.How can I join you? </summary><fieldset>
+            <br>
+    <input type="button" name="next" value="THIS TO JOIN" onclick="c()">
+    <br>  </fieldset>
+  </details>
+  <br>
+
+    <details name='1'>
+  <summary>2.What is Collapseless? </summary><fieldset><br>
+    The Collapseless team works on the development of computer software and websites, as well as physical containment.<br>
+</fieldset>
+</details>
+ <br>
+
+<details name='1'>
+    <summary> 3. Why is the website unresponsive sometimes? </summary> <fieldset>
+<br>
     Open URL time: <br>
     <br>
     When the frequency of visits is extremely high, the website will be closed and maintenance measures will
      be taken, and the maintenance time will change according to the progress of the work;
-    <br>
-    <br></h3><br>
-    <h3>4.Not satisfied with the content or graphics? <br><input type="button" name="next" value="Make recommendations" onclick="b()"> </h3>
-    <h2><input type="button" name="" value="EXIT" onclick="a()"></h2>
+    <br></fieldset></details>
+     <br>
+
+    <details name='1'>
+    <summary>4.Not satisfied with the content or graphics?</summary> <fieldset>
+      <br>
+    <input type="button" name="next" value="Make recommendations" onclick="b()">
+  </fieldset></details>
+  <br>
+
+  <h2><input type="button" name="" value="EXIT" onclick="a()"></h2> </h3>
   </div></font>
   </body>
 </html>
