--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ body {
 input[name='1'] {
   position: fixed;
   top: 0;
-  left: 10%;
-  transform: translateX(-61%);
+  left: 1%;
+  transform: translateX(145%);
   padding: 5px 5px;
   background-color: #000000;
   color: #fff;
@@ -47,8 +47,8 @@ input[name='1'] {
 input[name='2'] {
   position: fixed;
   top: 0;
-  left: 14%;
-  transform: translateX(39%);
+  left: 1%;
+  transform: translateX(245%);
   padding: 5px 5px;
   background-color: #000000;
    color: #fff;
@@ -56,23 +56,24 @@ input[name='2'] {
   border-radius: 5px;
   cursor: pointer;
 }
+/*
 input[name='3'] {
   position: fixed;
   top: 0;
   left: 18%;
   transform: translateX(139%);
   padding: 5px 5px;
-  background-color: #000000;
+  background-color: #ffffff;
    color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-}
+}*/
 input[name='4'] {
   position: fixed;
   top: 0;
-  left: 22%;
-  transform: translateX(239%);
+  left: 1%;
+  transform: translateX(345%);
   padding: 5px 5px;
   background-color: #000000;
    color: #fff;
@@ -80,6 +81,7 @@ input[name='4'] {
   border-radius: 5px;
   cursor: pointer;
 }
+/*
 input[name='5'] {
   position: fixed;
   top: 0;
@@ -92,6 +94,7 @@ input[name='5'] {
   border-radius: 5px;
   cursor: pointer;
 }
+*//*
 input[name='6'] {
   position: fixed;
   top: 0;
@@ -104,6 +107,7 @@ input[name='6'] {
   border-radius: 5px;
   cursor: pointer;
 }
+*/
 </style>
     <script type="text/javascript">
     function check(){
@@ -135,11 +139,11 @@ input[name='6'] {
 
     <h2><input type="button" name="1" value="Join us" onclick="check()"> </h2>
     <h2><input type="button" name="2" value="help" onclick="c()"></h2>
+    <!--
     <h2><input type="button" name="3" value="interesting things" onclick="ck()"></h2>
+    -->
     <h2><input type="button" name="4" value="Team News" onclick="che()"></h2>
-    <h2><input type="button" name="5" value="login" onclick="chk()"></h2>
-    <!--<h2><input type="button" name="6" value="Virus Collection" onclick="vo()" class='button1'></h2>    </div>
-  --><img src="file/Logo.ico" alt="Logo" width="200" height="200">
+    <img src="file/Logo.ico" alt="Logo" width="200" height="200">
     <div class="" style="--shutter-delay: 202.5ms;" color='white'></div>
     <br><br>
 <div class="" name='where'>
