--- a/join/index.html
+++ b/join/index.html
@@ -28,8 +28,8 @@
     <div class="">
     <h2><strong>Now that 5 people have joined, become one of them!</strong> </h2>
     <h1><strong>How:</strong></h1>
-    <h4><strong>1.<s> call to team </s><br>2.<input type="button" name="next" value="join" onclick="wab()"><br>
-      3.Email to Collapseless@126.com
+    <h4><strong>1.<input type="button" name="next" value="join" onclick="wab()"><br>
+    2.Email to Collapseless@126.com
       <br>
     3.None </strong> </h4>
     <h2><input type="button" name="" value="exit" onclick="as()"> </h2></div></font>
