--- a/join/wab.html
+++ b/join/wab.html
@@ -9,17 +9,12 @@
     <font color="white">
     <script type="text/javascript">
       function a() {
-        // WARNING:
         window.location.href='https://onlycollapse.github.io/';
       }
       function xaa() {
-        // WARNING:
         if(document.getElementById('one').value!=''){
-          //WHAT?什么？ WARNING!
           if(document.getElementById('two').value!=''){
-            // HAHA!
             if(document.getElementById('th').value!=''){
-              //IF YOU ...
               if(document.getElementById('year').value>14){// /^\w+((-\w+)|(\.\w+))*\@[A-Za-z0-9]+((\.|-)[A-Za-z0-9]+)*\.[A-Za-z0-9]+$/
                 if(document.getElementById('em').value.search(/^(.+)@(.+)$/) != -1){
                   if(document.getElementById('robot').value=='I am not robot.'){
@@ -34,7 +29,6 @@
                 alert('Your age is smaller than 14.');
               }
             }else{
-              // WARNING: 警告！
               alert('Please enter the postal code!');
             }
           }else{
@@ -79,15 +73,14 @@
       position: sticky;
       top: 100px;
     }
-    
+
     </style>
-    <!-- WARNING: 警告！; -->
     <div class="">
     <div class=""><font color='white'>
       <div class="" align='center'>
-        
+
         <fieldset>
-        <legend></legend>
+        <!--<legend></legend>-->
         <h3><font color='red'>*</font>Your country <br>
           <div>
 <select id="one">
