--- a/n.html
+++ b/n.html
@@ -11,7 +11,7 @@
         window.location.href='n/NewAI.html';
       }
       function a() {
-        window.location.href='https://onlycollapse.github.io/';
+        window.location.href='https://collapseless.github.io/';
       }
     </script>
     <style>
@@ -31,9 +31,11 @@
       <hr> <br>
         <details name="1">
       <summary>2024.3.7 The team was officially established!</summary>
+      <fieldset>
       <img src="file/Logo.ico" alt="" height="100" width="100"><br>
       <p>The team was officially established!</p>
-<br></details>
+</fieldset>
+</details>
       <h2 align='center'><input type="button" name="" value="EXIT" onclick="a()"></h2>
     </div></font>
   </body>
