--- a/help.html
+++ b/help.html
@@ -8,7 +8,7 @@
   <body style="background-color: #000000"><font color='white'>
     <script type="text/javascript">
       function a(){
-        window.location.href='https://onlycollapse.github.io/';
+        window.location.href='https://collapseless.github.io/';
       }
       function b(){
         window.location.href='dnh.html';
