--- a/join/index.html
+++ b/join/index.html
@@ -25,13 +25,67 @@
       width: 20%;
     }
     </style>
+    <script type="text/javascript">
+    function cuu(){
+      window.location.href="https://collapseless.github.io/help";
+    }
+    function check(){
+      window.location.href="https://collapseless.github.io";
+    }
+    function che(){
+      window.location.href="https://collapseless.github.io/n";
+    }
+    </script>
+    <style media="screen">
+    input[name='1'] {
+      position: fixed;
+      top: 0;
+      left: 1%;
+      transform: translateX(135%);
+      padding: 5px 5px;
+      background-color: #000000;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    input[name='2'] {
+      position: fixed;
+      top: 0;
+      left: 1%;
+      transform: translateX(245%);
+      padding: 5px 5px;
+      background-color: #000000;
+       color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    input[name='4'] {
+      position: fixed;
+      top: 0;
+      left: 1%;
+      transform: translateX(355%);
+      padding: 5px 5px;
+      background-color: #000000;
+       color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    </style>
+    <h2><input type="button" name="1" value="Home" onclick="check()"> </h2>
+    <h2><input type="button" name="2" value="Help" onclick="cuu()"></h2>
+    <!--
+    <h2><input type="button" name="3" value="interesting things" onclick="ck()"></h2>
+    -->
+    <h2><input type="button" name="4" value="Team News" onclick="che()"></h2>
     <div class="">
     <h2><strong>Now that 5 people have joined, become one of them!</strong> </h2>
     <h1><strong>How:</strong></h1>
     <h4><strong>1.<input type="button" name="next" value="join" onclick="wab()"><br>
     2.Email to Collapseless@126.com
       <br>
-    3.None </strong> </h4>
-    <h2><input type="button" name="" value="exit" onclick="as()"> </h2></div></font>
+    3.None </strong> </h4></div></font>
   </body>
 </html>
