--- a/join/wab.html
+++ b/join/wab.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>join we</title>
+    <title>join us</title>
     <link rel="icon" type="image/png" sizes="96x96" href="https://collapsepless.github.io/file/Logo.ico">
   </head>
   <body style="background-color: #000000">
