--- a/n.html
+++ b/n.html
@@ -6,14 +6,6 @@
     <link rel="icon" type="image/png" sizes="96x96" href="file/Logo.ico">
   </head>
   <body style="background-color: #000000"><font color='white'>
-    <script type="text/javascript">
-      function nai() {
-        window.location.href='n/NewAI.html';
-      }
-      function a() {
-        window.location.href='https://collapseless.github.io/';
-      }
-    </script>
     <style>
     input[name=next] {
     background-color: #4CAF50;
@@ -25,6 +17,61 @@
     }
     a:link {text-decoration: none; color:white;}
     </style>
+    <script type="text/javascript">
+    function check(){
+      window.location.href="join/";
+    }
+    function che(){
+      window.location.href="https://collapseless.github.io";
+    }
+    function cuu(){
+      window.location.href="help";
+    }
+    </script>
+    <style media="screen">
+    input[name='1'] {
+      position: fixed;
+      top: 0;
+      left: 1%;
+      transform: translateX(135%);
+      padding: 5px 5px;
+      background-color: #000000;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    input[name='2'] {
+      position: fixed;
+      top: 0;
+      left: 1%;
+      transform: translateX(245%);
+      padding: 5px 5px;
+      background-color: #000000;
+       color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    input[name='4'] {
+      position: fixed;
+      top: 0;
+      left: 1%;
+      transform: translateX(355%);
+      padding: 5px 5px;
+      background-color: #000000;
+       color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    </style>
+    <h2><input type="button" name="1" value="Join us" onclick="check()"> </h2>
+    <h2><input type="button" name="2" value="Help" onclick="cuu()"></h2>
+    <!--
+    <h2><input type="button" name="3" value="interesting things" onclick="ck()"></h2>
+    -->
+    <h2><input type="button" name="4" value="Home" onclick="che()"></h2>
     <div class="">
       <h1 align='center'><strong>Team News</strong></h1><br><br><br>
       <h3>News is in order from new to oldest, from top to bottom</h3>
@@ -36,7 +83,6 @@
       <p>The team was officially established!</p>
 </fieldset>
 </details>
-      <h2 align='center'><input type="button" name="" value="EXIT" onclick="a()"></h2>
     </div></font>
   </body>
 </html>
