--- a/help.html
+++ b/help.html
@@ -16,6 +16,15 @@
       function c(){
         window.location.href='join/join.html';
       }
+      function check(){
+        window.location.href="join/";
+      }
+      function cuu(){
+        window.location.href="https://collapseless.github.io";
+      }
+      function che(){
+        window.location.href="n";
+      }
     </script>
     <style>
     input[name=next] {
@@ -28,6 +37,61 @@
       width: 20%;
     }
     </style>
+    <script type="text/javascript">
+    function check(){
+      window.location.href="join/";
+    }
+    function cuu(){
+      window.location.href="https://collapseless.github.io";
+    }
+    function che(){
+      window.location.href="n";
+    }
+    </script>
+    <style media="screen">
+    input[name='1'] {
+      position: fixed;
+      top: 0;
+      left: 1%;
+      transform: translateX(135%);
+      padding: 5px 5px;
+      background-color: #000000;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    input[name='2'] {
+      position: fixed;
+      top: 0;
+      left: 1%;
+      transform: translateX(245%);
+      padding: 5px 5px;
+      background-color: #000000;
+       color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    input[name='4'] {
+      position: fixed;
+      top: 0;
+      left: 1%;
+      transform: translateX(355%);
+      padding: 5px 5px;
+      background-color: #000000;
+       color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    </style>
+    <h2><input type="button" name="1" value="Join us" onclick="check()"> </h2>
+    <h2><input type="button" name="2" value="Home" onclick="cuu()"></h2>
+    <!--
+    <h2><input type="button" name="3" value="interesting things" onclick="ck()"></h2>
+    -->
+    <h2><input type="button" name="4" value="Team News" onclick="che()"></h2>
     <div class="">
       <h1><strong>help</strong></h1><br>
     <h3><br><br>You can email us at Collapseless@163.com<br><br><br>
@@ -62,8 +126,7 @@
     <input type="button" name="next" value="Make recommendations" onclick="b()">
   </fieldset></details>
   <br>
-
-  <h2><input type="button" name="" value="EXIT" onclick="a()"></h2> </h3>
+ </h3>
   </div></font>
   </body>
 </html>
