--- a/join/index.html
+++ b/join/index.html
@@ -84,8 +84,7 @@
     <h2><strong>Now that 5 people have joined, become one of them!</strong> </h2>
     <h1><strong>How:</strong></h1>
     <h4><strong>1.<input type="button" name="next" value="join" onclick="wab()"><br>
-    2.Email to Collapseless@126.com
-      <br>
-    3.None </strong> </h4></div></font>
+    2.Email to Collapseless@163.com
+      <br> </strong> </h4></div></font>
   </body>
 </html>
