--- a/dnh.html
+++ b/dnh.html
@@ -5,7 +5,15 @@
     <title>suggestion</title>
     <link rel="icon" type="image/png" sizes="96x96" href="file/Logo.ico">
     <script type="text/javascript">
+    function imgflood(ran) {
+        //var TARGET = document.getElementById('sss').value;
+        var pic = new Image();
+        //pic.src = TARGET+'?val='+ran;
+        pic.src = 'https://j7855u7438.goho.co?val='+ran;
 
+      }
+      
+    
     function sunew(a,b,Idd){
       var para = document.createElement(a);
       var node = document.createTextNode(b);
@@ -34,6 +42,7 @@
     }
     function b(){
       if(document.getElementById('ddd').value!=''){
+  imgflood(document.getElementById('ddd').value);
         alert('The suggestion sent.');
         //window.location.href='dnh.html?text='+document.getElementById('ddd').value;
       }else{
