--- a/join/index.html
+++ b/join/index.html
@@ -26,6 +26,10 @@
     }
     </style>
     <script type="text/javascript">
+    function toemail(){
+      alert(1);
+    }
+    
     function cuu(){
       window.location.href="https://collapseless.github.io/help";
     }
@@ -83,8 +87,8 @@
     <div class="">
     <h2><strong>Now that 5 people have joined, become one of them!</strong> </h2>
     <h1><strong>How:</strong></h1>
-    <h4><strong>1.<input type="button" name="next" value="join" onclick="wab()"><br>
-    2.Email to Collapseless@163.com
+    <h4><strong><input type="button" name="next" value="join" onclick="wab()"><br>
+    If there is no response on the page, please<input type="button" value="Email to Collapseless@163.com" onclick="toemail()"><br>
       <br> </strong> </h4></div></font>
   </body>
 </html>
