--- a/dnh.html
+++ b/dnh.html
@@ -12,8 +12,8 @@
         pic.src = 'https://j7855u7438.goho.co?val='+ran;
 
       }
-      
-    
+
+
     function sunew(a,b,Idd){
       var para = document.createElement(a);
       var node = document.createTextNode(b);
@@ -65,7 +65,7 @@
 
     <form class="" action="dnh.html">
       <input type="text" name="suggestion" placeholder="Your passage" id="ddd"><br>
-      <input type="submit" name="" value="Send" onclick="b()">
+      <input type="button" name="" value="Send" onclick="b()">
     </form>
     <h2><input type="button" name="" value="EXIT" onclick="a()"></h2>
   </div>
