--- a/join/index.html
+++ b/join/index.html
@@ -27,9 +27,9 @@
     </style>
     <script type="text/javascript">
     function toemail(){
-      alert(1);
+      window.location.href="toemail";
     }
-    
+
     function cuu(){
       window.location.href="https://collapseless.github.io/help";
     }
@@ -88,7 +88,8 @@
     <h2><strong>Now that 5 people have joined, become one of them!</strong> </h2>
     <h1><strong>How:</strong></h1>
     <h4><strong><input type="button" name="next" value="join" onclick="wab()"><br>
-    If there is no response on the page, please<input type="button" value="Email to Collapseless@163.com" onclick="toemail()"><br>
+    If there is no response on the page, please <br>
+    <input type="button" value="Email to Collapseless@163.com" onclick="toemail()"><br>
       <br> </strong> </h4></div></font>
   </body>
 </html>
