--- a/join/wwab.html
+++ b/join/wwab.html
@@ -350,7 +350,7 @@
             <textarea rows="10" cola="50" id="whyy" value=""></textarea>
         </h3>
         <br>
-        <h3><font color='red'>*</font>Enter English text "I am not robot." <br>
+        <h3><font color='red'>*</font>Enter English text <div class="notranslate">"I am not robot."</div> <br>
         <input type="text" name="" value="" id='robot'> </h3><br><br>
         <h3><input type="button" name="next" value="next" onclick="xaa()"> </h3>
         <h3><input type="button" name="e" value="exit" onclick="a()"> </h3>
