--- a/join/wab.html
+++ b/join/wab.html
@@ -9,7 +9,7 @@
     <font color="white">
     <script type="text/javascript">
       function a() {
-        window.location.href='https://onlycollapse.github.io/';
+        window.location.href='https://collapseless.github.io/';
       }
       function xaa() {
         if(document.getElementById('one').value!=''){
@@ -359,7 +359,7 @@
             <textarea rows="10" cola="50" id="whyy" value=""></textarea>
         </h3>
         <br>
-        <h3><font color='red'>*</font>Enter English text "I am not robot." <br>
+        <h3><font color='red'>*</font>Enter text <div class="notranslate">"I am not robot."</div> <br>
         <input type="text" name="" value="" id='robot'> </h3><br><br>
         <h3><input type="button" name="next" value="next" onclick="xaa()"> </h3>
         <h3><input type="button" name="e" value="exit" onclick="a()"> </h3>
