--- a/n.html
+++ b/n.html
@@ -72,10 +72,9 @@
     <h2><input type="button" name="3" value="interesting things" onclick="ck()"></h2>
     -->
     <h2><input type="button" name="4" value="Home" onclick="che()"></h2>
-    <div class="">
-      <h1 align='center'><strong>Team News</strong></h1><br><br><br>
-      <h3>News is in order from new to oldest, from top to bottom</h3>
-      <hr> <br>
+    <div class=""><br>
+      <h3 align='center'>News is in order from new to oldest, from top to bottom</h3> <hr>
+      <h1 align='center'><strong>Team News</strong></h1><br>
         <details name="1">
       <summary>2024.3.7 The team was officially established!</summary>
       <fieldset>
@@ -83,6 +82,180 @@
       <p>The team was officially established!</p>
 </fieldset>
 </details>
+  <br><br><br> <hr>
+    <h1 align='center'><strong>Pages news</strong></h1>
+
+    <br>
+    <details name="2">
+      <summary> Verson1.6.0 <br> Time2024/8/18 </summary>
+      <fieldset>
+        <p>
+          -Fix bugs.<br>
+          -Optimize the experience.<br>
+          -Add PagesNews feature.<br>
+        </p>
+      </fieldset>
+    </details>
+
+    <br>
+    <details name="2">
+      <summary> Verson1.5.0 <br> Time2024/6/1 </summary>
+      <fieldset>
+        <p>
+          -Fix bugs.<br>
+          -Remove Game feature.<br>
+          -Optimize the experience.<br>
+        </p>
+      </fieldset>
+    </details>
+
+    <br>
+    <details name="2">
+      <summary> Verson1.4.1 <br> Time2024/5/22 </summary>
+      <fieldset>
+        <p>
+          -Fix bugs.<br>
+          -Reset pages color.<br>
+          -Add Game feature.<br>
+        </p>
+      </fieldset>
+    </details>
+
+    <br>
+    <details name="2">
+      <summary> Verson1.3.0 <br> Time2024/4/31 </summary>
+      <fieldset>
+        <p>
+          -Fix bugs.<br>
+          -Optimize the experience.<br>
+          -Reset all web, more brief pages.<br>
+        </p>
+      </fieldset>
+    </details>
+
+    <br>
+    <details name="2">
+      <summary> Verson1.2.3 <br> Time2024/4/16 </summary>
+      <fieldset>
+        <p>
+          -The "TellUs" interface has been optimized.<br>
+          -Optimize the experience.<br>
+          -Add help interface.<br>
+        </p>
+      </fieldset>
+    </details>
+
+    <br>
+    <details name="2">
+      <summary> Verson1.2.2 <br> Time2024/4/15 </summary>
+      <fieldset>
+        <p>
+          -Fix bugs.<br>
+          -The "Join" interface has been optimized.<br>
+          -Optimize the experience.<br>
+        </p>
+      </fieldset>
+    </details>
+
+    <br>
+    <details name="2">
+      <summary> Verson1.2.1 <br> Time2024/4.10 </summary>
+      <fieldset>
+        <p>
+          -The "Join" interface has been optimized.<br>
+        </p>
+      </fieldset>
+    </details>
+
+    <br>
+    <details name="2">
+      <summary> Verson1.2.0 <br> Time2024/3/31 </summary>
+      <fieldset>
+        <p>
+          -Fix bugs.<br>
+          -Add TellUs feature. <br>
+          -The "Join" interface has been optimized.<br>
+          -Optimize the experience.<br>
+        </p>
+      </fieldset>
+    </details>
+
+    <br>
+    <details name="2">
+      <summary> Verson1.1.3 <br> Time2024/3/20 </summary>
+      <fieldset>
+        <p>
+          -Fix bugs.<br>
+          -Optimize the experience.<br>
+        </p>
+      </fieldset>
+    </details>
+
+    <br>
+    <details name="2">
+      <summary> Verson1.1.2 <br> Time2024/3/13 </summary>
+      <fieldset>
+        <p>
+          -Fix bugs.<br>
+        </p>
+      </fieldset>
+    </details>
+
+    <br>
+    <details name="2">
+      <summary> Verson1.1.1 <br> Time2024/3/11 </summary>
+      <fieldset>
+        <p>
+          -Fix bugs.<br>
+          -More brief pages.<br>
+        </p>
+      </fieldset>
+    </details>
+
+    <br>
+    <details name="2">
+      <summary> Verson1.1.0 <br> Time2024/3/10 </summary>
+      <fieldset>
+        <p>
+          -Fix bugs.<br>
+          -More brief pages.<br>
+          -Remove the sign-in feature.<br>
+        </p>
+      </fieldset>
+    </details>
+
+    <br>
+    <details name="2">
+      <summary> Verson1.0.1 <br> Time2024/3/7 </summary>
+      <fieldset>
+        <p>
+          -First formal verson.<br>
+          -Fix bugs.<br>
+        </p>
+      </fieldset>
+    </details>
+
+    <br>
+    <details name="2">
+      <summary> Verson0.2.0 <br> Time2024/2/? (Time can not found)</summary>
+      <fieldset>
+        <p>
+          -Add sign-in feature. <br>
+          -Fix bugs.<br>
+        </p>
+      </fieldset>
+    </details>
+
+    <br>
+    <details name="2">
+      <summary> Verson0.1.0 <br> Time2024/2/? (Time can not found) </summary>
+      <fieldset>
+        <p>
+          -Fix bugs.
+        </p>
+      </fieldset>
+    </details>
+
     </div></font>
   </body>
 </html>
