--- a/help.html
+++ b/help.html
@@ -14,7 +14,7 @@
         window.location.href='dnh.html';
       }
       function c(){
-        window.location.href='join/join.html';
+        window.location.href='join/';
       }
       function check(){
         window.location.href="join/";
