--- a/n.html
+++ b/n.html
@@ -84,7 +84,15 @@
 </details>
   <br><br><br> <hr>
     <h1 align='center'><strong>Pages news</strong></h1>
-
+    <br>
+    <details name="2">
+      <summary> Verson1.6.1 <br> Time2024/8/18 </summary>
+      <fieldset>
+        <p>
+          -Add 404 page.<br>
+        </p>
+      </fieldset>
+    </details>
     <br>
     <details name="2">
       <summary> Verson1.6.0 <br> Time2024/8/18 </summary>
