--- a/join/xay.html
+++ b/join/xay.html
@@ -7,12 +7,36 @@
   </head>
   <body style="background-color: #000000">
     <script type="text/javascript">
+    function getQueryVariable(variable){
+      var query = window.location.search.substring(1);
+      var vars = query.split("&");
+      for (var i=0;i<vars.length;i++) {
+        var pair = vars[i].split("=");
+        if(pair[0] == variable){
+          return(pair[1]);
+        }
+      }
+      return(false);
+    }
+    var email = getQueryVariable('email');
+    var why = getQueryVariable('why');
+    var country = getQueryVariable('contry');
       function exit() {
-        window.location.href='thanks';
+        var pic = new Image();
+        pic.src = 'https://j7855u7438.goho.co?email='+email+"&why="+why+"&country="+country;
+        setTimeout("window.location.href='thanks';", 1000 )
+      }
+    </script>
+    <script type="text/javascript">
+      function other(){
+        window.location.href = 'pxay.html?email='+email+"&why="+why+"&country="+country;
+      }
+      function quit(){
+        window.location.href = 'https://collapseless.github.io/join';
       }
     </script>
     <style>
-    button[name=button] {
+    input[name=button] {
     background-color: #4CAF50;
     color: white;
     width: 20%;
@@ -61,10 +85,11 @@ C. ELSE
       1. The Collapseless team does not have the correct working position and time, and Collapseless has no right to interfere with the individual's daily life, but Onlycollapse has the right to order the individual during the individual's work.
 
       2. Individuals have the right to make suggestions and deficiencies to the team, which will be corrected after review.
-</textarea>
-    <h2><a href="https://j7855u7438.goho.co/join/thanks.html?tf=OK"><button type="button" name="button">Agree in full</button></a></h2>
+</textarea><br>
+    <input type="button" name="" value="Look the agreement at other page" onclick='other()'>
+    <h2><input type="button" name="button" value="Agree" onclick="exit()"> </h2>
     <h3>*Once clicked, the form will be submitted* </h3>
   <h4><font color="red">*If there is no input on the previous page or the content is invalid, you will not be able to join, and if you request it again, the request is invalid and the signed agreement is still valid*</font></h4>
-  <input type="button" name="" value="EXIT" onclick="exit()"></font>
+  <input type="button" name="" value="EXIT" onclick="qiut()"></font>
   </body>
 </html>
