--- a/join/xxay.html
+++ b/join/xxay.html
@@ -94,7 +94,7 @@ C. Miscellaneous
     <h2><input type="button" name="" value="Look the agreement at other page" onclick='other()'>
     <h2><input type="button" name="button" value="Agree" onclick="exit()"> </h2></h2>
     <h3>*Once clicked, the form will be submitted* </h3>
-  <h4><font color="red">*If there is no input on the previous page or the content is invalid, you will not be able to join, and if you request it again, the request is invalid and the signed agreement is still valid*</font></h4>
+  <h4><font color="red">*If there is no input on the previous page or the content is invalid, you will not be able to join.*</font></h4>
   <input type="button" name="" value="EXIT" onclick="quit()"></font>
   </body>
 </html>
