--- a/join/xay.html
+++ b/join/xay.html
@@ -49,7 +49,7 @@
     agreement of Collapseless
     Collapseless Non-Disclosure Agreement
 
-This Agreement is entered into by the Collapseless team and the person or entity you fill in in the field in the process of completing this Agreement.
+This Agreement is entered into by and between the Collapseless team and the individual or company (Team) that you complete in the process of completing this Agreement, hereinafter referred to as the "Individual".
 A. Confidential Information
       In this Agreement, "Confidential Information" means information designated by the Collapseless team or its affiliates as confidential to an individual, or which, by its nature and the circumstances of disclosure, should be treated in good faith. Confidential Information includes, but is not limited to, any discussions and materials between the Collapseless team or its affiliates and individuals relating to unpublished Collapseless products, and the terms of any Collapseless team agreement or protocol template. However, confidential information does not include information that an individual can conclusively demonstrate that:
 
