--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@ input[name='6'] {
     </script>
     <div class="">
       <br><br><br>
-    <h1><strong>
+    <h1>
+      <br>If there is no accident, we will not update this website in 2024.<br><br>
+      <strong>
 <div class="notranslate">Collapseless</div></strong>  </h1>
     <div class="">
     </div>
